# bazel-sample

./: .gitignore  README.md  WORKSPACE
apps/demo/: BUILD.bazel  lib.py  main.py
archive/: WORKSPACE
archive/app/: BUILD.bazel  main.py
archive/calculator/: BUILD.bazel  calculator.py
archive/tools/pip/: requirements.txt
examples/python-coverage/: WORKSPACE
examples/python-coverage/apps/demo/: BUILD.bazel
examples/python-coverage/genhtml/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
examples/python-coverage/genhtml/demo/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  lib.py.func-sort-c.html  lib.py.func.html  lib.py.gcov.html
examples/python-multi-version/: WORKSPACE
examples/python-multi-version/apps/demo/: BUILD.bazel
