load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")

py_binary(
  name = "demo",
  srcs = [
    "main.py",
  ],
  main = "main.py",
  deps = [
    ":demo_lib",
  ],
)

py_library(
    name = "demo_lib",
    srcs = [
      "lib.py",
    ],
    deps = [
      requirement("numpy"),
    ],
)
