load("@rules_python//python:packaging.bzl", "py_wheel")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@my_deps//:requirements.bzl", "requirement")

py_binary(
  name = "demo",
  srcs = [
    "main.py",
  ],
  main = "main.py",
  deps = [
    ":demo_lib",
  ],
)

py_library(
    name = "demo_lib",
    srcs = [
      "lib.py",
    ],
    deps = [
      requirement("numpy"),
    ],
)

py_test(
    name = "lib_test",
    srcs = ["lib_test.py"],
    deps = [":demo_lib"],
)

py_wheel(
  name = "demo_wheel",
  distribution = "example_minimal_library",
  python_tag = "py3",
  version = "0.0.1",
  deps = [":demo"],
)